# industrial-io

./: .gitignore  LICENSE  Makefile  README.md
docs/: mongo_aggregation.md
iio-frontend/: package.json
industrial-io/: Cargo.toml
industrial-io/app/: Cargo.toml
industrial-io/crud/: Cargo.toml
industrial-io/crud-derive/: Cargo.toml
industrial-io/crud-derive/src/: indexes.rs  lib.rs
industrial-io/crud/src/: cache.rs  lib.rs  persistence.rs  provider.rs
industrial-io/crud/tests/: test_crud_derive.rs  test_persistence.rs
industrial-io/domain/: Cargo.toml
industrial-io/domain/src/: lib.rs
industrial-io/domain/src/domain/: maintain_companies.rs  mod.rs  operate_catalog.rs
industrial-io/domain/src/entities/: category.rs  company.rs  industry.rs  mod.rs  property.rs  relationship.rs  view.rs
industrial-io/domain/src/repository/: repo.rs
industrial-io/domain/tests/: test_crud_derive.rs
industrial-io/service/: Cargo.toml
industrial-io/service/src/: lib.rs  provider.rs
industrial-io/src/: errors.rs  lib.rs
industrial-io/src/domain/: entities.rs  entity.rs  mod.rs  objects.rs  operate_catalog.rs  view.rs
industrial-io/src/entities/: category.rs  company.rs  objects.rs  property.rs  relationship.rs
industrial-io/src/infra/: provider.rs
industrial-io/src/repository/: repo.rs
tg-frontend/: package.json
toy-graph/: Cargo.toml
toy-graph/crud/: Cargo.toml
toy-graph/crud-derive/: Cargo.toml
toy-graph/crud-derive/src/: lib.rs
toy-graph/crud/src/: cache.rs  lib.rs  persistence.rs
toy-graph/src/: domain.rs  errors.rs  lib.rs  repository.rs
toy-graph/src/domain/: category.rs  company.rs  industry.rs  mod.rs  property.rs  relationship.rs
toy-graph/src/entity/: catalog.rs  category.rs  company.rs  mod.rs  property.rs  relationship.rs  view.rs
toy-graph/src/infra/: mod.rs  persistence.rs  provider.rs
toy-graph/src/repository/: crud.rs  mod.rs  repo.rs
toy-graph/src/service/: cache.rs  mod.rs  provider.rs
