[package]
name = "toy-graph"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"


[lib]
name = "rust"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1"
bson = "2"
mongodb = "2"
pyo3 = { version = "0", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = "1"
tokio-stream = "0"
