[package]
name = "crud"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
crud-derive = { path = "../crud-derive" }
anyhow = "1"
async-trait = "0"
bson = "2"
mongodb = "2"
redis = { version = "0", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
tokio-stream = "0"

[dev-dependencies]
tokio = "1"
